tests/ui-venial/attr-duplicate.stderr
error: duplicate rename attribute
 --> tests/ui-venial/attr-duplicate.rs:8:5
  |
8 |     #[serde(rename = "B")]
  |     ^^^^^^^^^^^^^^^^^^^^^^
